# Pixel-Game-Engine

./: CMakeLists.txt  README.md  Riyal.sln  UnRiyal.sln  modularizatiton.txt  premake5.lua
Riyal/: Hazel.vcxproj  Hazel.vcxproj.filters  Riyal.vcxproj  Riyal.vcxproj.filters
Riyal/src/: Riyal.h
Riyal/src/Riyal/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
Sandbox/: Sandbox.vcxproj
Sandbox/src/: Application.cpp  SandboxApp.cpp
UnRiyal/: UnRiyal.vcxproj
UnRiyal/src/: Test.cpp  Test.h
include/Game/: game.h  raycasting.h
src/: main.cpp
